--- a/web/buysell.html
+++ b/web/buysell.html
@@ -192,12 +192,15 @@
                                 <div class="row mb-3">
                                     <label for="inputEmail3" class="col-sm-2 col-form-label">ticker</label>
                                     <div class="col-sm-10">
-               <select class="form-select mb-3" aria-label="Default select example">
-                                <option selected="">Currency Pair</option>
+               <select id="buyOrderSymbol" class="form-select mb-3" aria-label="Default select example">
+
+
                                 <option value="dione">DIONE</option>
                                 <option value="callisto">CALLISTO</option>
                                 <option value="europa">EUROPA</option>
                                 <option value="pandora">PANDORA</option>
+
+
                             </select>
                                     </div>
                                 </div>
@@ -218,7 +221,7 @@
                                     <div class="col-sm-10">
         <div class="input-group mb-3">
 
-                                <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                <input id="buyOrderUnits" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                                 <span class="input-group-text">units</span>
                             </div>   </div>
                                 </div><div class="row mb-3">
@@ -235,7 +238,7 @@
 
 
                         <div class="d-grid gap-2">
-  <button class="btn btn-lg btn-primary" type="button">Place SMART BUY Order</button>
+  <button onclick="processBuyForm()" class="btn btn-lg btn-primary" type="button">Place SMART BUY Order</button>
 
 </div>        
                                 
@@ -251,7 +254,7 @@
                                     <label for="inputEmail3" class="col-sm-2 col-form-label">ticker</label>
                                     <div class="col-sm-10">
                <select class="form-select mb-3" aria-label="Default select example">
-                                <option selected="">Currency Pair</option>
+
                                 <option value="dione">DIONE</option>
                                 <option value="callisto">CALLISTO</option>
                                 <option value="europa">EUROPA</option>
@@ -348,6 +351,13 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
+<script src="https://code.jquery.com/jquery-2.1.3.js"></script> 
+
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js "></script>
+
+<script src="scripting/cookies/cookies.js"></script>
+
+<script src="scripting/trader/buysell.js"></script>
 
 
 
