--- a/web/button.html
+++ b/web/button.html
@@ -45,8 +45,8 @@
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
-                <a href="index.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
+                <a href="dashboard.html" class="navbar-brand mx-4 mb-3">
+                    <h5 class="text-primary"><i class="fa fa-hashtag me-2"></i>NapkinExchange</h5>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
@@ -54,16 +54,40 @@
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0">Jhon Doe</h6>
-                        <span>Admin</span>
+                        <h6 id="sidebarTraderName" class="mb-0">--</h6>
+                        <span id="sidebarTraderBalance">--</span>
                     </div>
                 </div>
+
                 <div class="navbar-nav w-100">
-                    <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
+
+
+
+<a href="dashboard.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+
+
+
+
+
+
+<a href="buysell.html" class="nav-item nav-link">
+
+<i class="fa fa-keyboard me-2"></i>
+
+Buy/Sell
+
+</a>
+                 
+ 
+
+
+
+
+
+   <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item active">Buttons</a>
+                            <a href="button.html" class="dropdown-item">Buttons</a>
                             <a href="typography.html" class="dropdown-item">Typography</a>
                             <a href="element.html" class="dropdown-item">Other Elements</a>
                         </div>
@@ -84,7 +108,7 @@
                 </div>
             </nav>
         </div>
-        <!-- Sidebar End -->
+<!-- Sidebar End -->
 
 
         <!-- Content Start -->
@@ -424,21 +448,26 @@
             <!-- Button End -->
 
 
-            <!-- Footer Start -->
-            <div class="container-fluid pt-4 px-4">
+            <!-- Footer Start -->            <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
-                            &copy; <a href="#">Your Site Name</a>, All Right Reserved. 
+
+                            Made with ❤ by the
+
+<a href="https://softwareshinobi.digital" target="softwareshinobi">Software Shinobi</a>.
+
                         </div>
                         <div class="col-12 col-sm-6 text-center text-sm-end">
                             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a href="https://htmlcodex.com">HTML Codex</a>
+                            Designed By <a href="https://htmlcodex.com">HTML Codex</a>.
+
+                        Distributed By <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>.
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Footer End -->
+<!-- Footer End -->
         </div>
         <!-- Content End -->
 
