--- a/web/dashboard2.html
+++ b/web/dashboard2.html
@@ -391,119 +391,106 @@ template
                     </div>
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light rounded h-100 p-4">
-                            <h6 class="mb-4">Bordered Table</h6>
-                            <table class="table table-bordered">
+                            <h6 class="mb-4">holdings</h6>
+                            <table id="holdings" class="table table-bordered">
                                 <thead>
                                     <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">First Name</th>
-                                        <th scope="col">Last Name</th>
-                                        <th scope="col">Email</th>
+
+                                        <th scope="col">ticker</th>
+                                        <th scope="col">amountOwned</th>
+                                        <th scope="col">costBasis</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>John</td>
-                                        <td>Doe</td>
-                                        <td>jhon@email.com</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>mark@email.com</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>jacob@email.com</td>
-                                    </tr>
-                                </tbody>
+
+                                <tbody></tbody>
+
                             </table>
                         </div>
                     </div>
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light rounded h-100 p-4">
-                            <h6 class="mb-4">Table Without Border</h6>
-                            <table class="table table-borderless">
-                                <thead>
+                            <h6 class="mb-4">Profit Rankings</h6>
+                            <table id="activity-display-table" class="table table-borderless">
+                               <thead>
                                     <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">First Name</th>
-                                        <th scope="col">Last Name</th>
-                                        <th scope="col">Email</th>
+
+                                        <th>
+
+                                           ranking
+
+                                        </th>
+
+                                        <th>
+
+                                            username
+
+                                        </th>
+
+                                        <th>
+
+                                            balance
+
+                                        </th>
+                                                <th>
+
+                                            profit
+
+                                        </th>
+
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>John</td>
-                                        <td>Doe</td>
-                                        <td>jhon@email.com</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>mark@email.com</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>jacob@email.com</td>
-                                    </tr>
-                                </tbody>
+
+                                    </thead>
+
+<tbody></tbody>
+
                             </table>
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="bg-light rounded h-100 p-4">
-                            <h6 class="mb-4">Responsive Table</h6>
+                            <h6 class="mb-4">orders</h6>
                             <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">#</th>
-                                            <th scope="col">First Name</th>
-                                            <th scope="col">Last Name</th>
-                                            <th scope="col">Email</th>
-                                            <th scope="col">Country</th>
-                                            <th scope="col">ZIP</th>
-                                            <th scope="col">Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td>John</td>
-                                            <td>Doe</td>
-                                            <td>jhon@email.com</td>
-                                            <td>USA</td>
-                                            <td>123</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">2</th>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>mark@email.com</td>
-                                            <td>UK</td>
-                                            <td>456</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">3</th>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>jacob@email.com</td>
-                                            <td>AU</td>
-                                            <td>789</td>
-                                            <td>Member</td>
-                                        </tr>
-                                    </tbody>
+                                <table id="orders" class="table">
+
+<thead>
+
+<tr>
+
+<th>id</th>
+
+<th>symbol</th>
+
+<th>type</th>
+
+<th>
+
+sharesToBuy
+
+</th>
+
+<th>
+
+relatedOrderId
+
+</th>
+
+<th>
+
+strikePrice
+
+</th>
+
+<th>
+
+assetPrice
+
+</th>
+</tr>
+
+</thead>
+
+<tbody></tbody>
+
                                 </table>
                             </div>
                         </div>
@@ -554,6 +541,17 @@ template
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+<script src="https://code.jquery.com/jquery-2.1.3.js"></script> 
+
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js "></script>
+
+<script src="scripting/cookies/cookies.js"></script>
+
+<script src="scripting/leaderboard/leaderboard.js"></script>
+
+<script src="scripting/trader/detail.js"></script>
+
 </body>
 
 </html>
