added market watch

--- a/web/buysell.html
+++ b/web/buysell.html
@@ -397,27 +397,32 @@ template
     </div>
 
     <!-- JavaScript Libraries -->
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="lib/chart/chart.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
+
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
+
     <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.js"></script> 
 
-<script src="https://code.jquery.com/jquery-2.1.3.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js "></script>
+    <script src="scripting/cookies/cookies.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js "></script>
+    <script src="scripting/broker/buysell.js"></script>
 
-<script src="scripting/cookies/cookies.js"></script>
+    <script src="scripting/dashboard/dashboard.js"></script>
 
-<script src="scripting/broker/buysell.js"></script>
+</body>
 
-
-
-</body></html>
+</html>
