balances displaying on dashboard and sidebar correctly

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -249,32 +249,32 @@
                             <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                                 <i class="fa fa-chart-line fa-3x text-primary"></i>
                                 <div class="ms-3">
-                                    <p class="mb-2">Account Balance</p>
-                                    <h6 id="dashboardAccountBalance" class="mb-0">--</h6>
+                                    <p class="mb-2">Account Value</p>
+                                    <h6 id="traderAccountValue" class="mb-0">--</h6>
                                 </div>
                             </div>
                         </div><div class="col-sm-6 col-xl-3">
                             <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                                 <i class="fa fa-chart-line fa-3x text-primary"></i>
                                 <div class="ms-3">
-                                    <p class="mb-2">Account Balance</p>
-                                    <h6 id="dashboardAccountBalance" class="mb-0">--</h6>
+                                    <p class="mb-2">Portfolio Value</p>
+                                    <h6 id="traderPortfolioValue" class="mb-0">--</h6>
                                 </div>
                             </div>
                         </div><div class="col-sm-6 col-xl-3">
                             <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                                 <i class="fa fa-chart-line fa-3x text-primary"></i>
                                 <div class="ms-3">
-                                    <p class="mb-2">Account Balance</p>
-                                    <h6 id="dashboardAccountBalance" class="mb-0">--</h6>
+                                    <p class="mb-2">Liquid Funds</p>
+                                    <h6 id="traderAccountAvailable" class="mb-0">--</h6>
                                 </div>
                             </div>
                         </div><div class="col-sm-6 col-xl-3">
                             <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                                 <i class="fa fa-chart-line fa-3x text-primary"></i>
                                 <div class="ms-3">
-                                    <p class="mb-2">Account Balance</p>
-                                    <h6 id="dashboardAccountBalance" class="mb-0">--</h6>
+                                    <p class="mb-2">Free Margin %</p>
+                                    <h6 id="traderAccountUsage" class="mb-0">--</h6>
                                 </div>
                             </div>
                         </div>
@@ -570,9 +570,13 @@
 
         <script src="scripting/cookies/cookies.js"></script>
 
-        <script src="scripting/leaderboard/leaderboard.js"></script>
+        <script src="scripting/trader/sidebar.js"></script>
+
+        <script src="scripting/dashboard/balances.js"></script>
 
         <script src="scripting/trader/detail.js"></script>
+
+        <script src="scripting/leaderboard/leaderboard.js"></script>
 
         <script src="scripting/trader/notification.js"></script>
 
@@ -580,13 +584,15 @@
 
         <!-- new world -->
 
-        <script src="scripting/trader/sidebar.js"></script>
+
 
         <script src="scripting/dashboard/notifications.js"></script>
 
         <script src="scripting/dashboard/openorders.js"></script>
 
         <script src="scripting/dashboard/portfolio.js"></script>
+
+
 
     </body>
 
