--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -350,17 +350,17 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-12 col-xl-6">
+                        <div class="col-sm-12 col-xl-7">
                             <div class="bg-light rounded h-100 p-4">
-                                <h6 class="mb-4">Portfolio Holdings</h6>
-                                <table id="holdings" class="table table-hover table-striped">
+                                <h6 class="mb-6">Security Portfolio</h6>
+                                <table id="securityPortfolio" class="table table-hover table-striped">
                                     <thead>
                                         <tr>
 
                                             <th scope="col">Symbol</th>
                                             <th scope="col">Units</th>
                                             <th scope="col">Cost Basis</th>
-                                             <th scope="col">Value</th>
+                                             <th scope="col">Purchase Value</th>                                             <th scope="col">Current Value</th>
                                         </tr>
                                     </thead>
 
@@ -370,7 +370,7 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-xl-6">
+                        <div class="col-sm-12 col-xl-5">
                             <div class="bg-light rounded h-100 p-4">
 
                                 <h6 class="mb-4">
