updating formatting of values

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -447,13 +447,13 @@
 
                                                 <th>
 
-                                                    Partner Id
+                                                    Pair Id
 
                                                 </th>
 
                                                 <th>
 
-                                                    Trigger Price
+                                                    Strike Price
 
                                                 </th>
 
