--- a/web/.trash/dashboardlegayc.html
+++ b/web/.trash/dashboardlegayc.html
@@ -10,15 +10,15 @@ Dashboard / The Napkin Exchange
 
 </title>
 
-<!-- head / css / begin --><meta charset="utf-8">
+<!-- head / css / begin --><link rel="icon" type="image/png" href="favicon.png" />
+
+<meta charset="utf-8">
 
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 <meta content="" name="keywords">
 
 <meta content="" name="description">
-
-<link href="img/favicon.ico" rel="icon">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 
